Adding Note Guards
