# src/swagger.json
@@ -44,6 +44,28 @@
 				],
 				"type": "string"
 			},
+			"SetNoteContentParams": {
+				"properties": {
+					"oldGuardNonce": {
+						"type": "string"
+					},
+					"newGuardNonce": {
+						"type": "string"
+					},
+					"contentHTML": {
+						"type": "string"
+					},
+					"contentText": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"contentHTML",
+					"contentText"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Encryption": {
 				"enum": [
 					"NONE",
@@ -51,6 +73,32 @@
 					"CERTIFICATE"
 				],
 				"type": "string"
+			},
+			"SetNoteEncryptionParams": {
+				"properties": {
+					"oldGuardNonce": {
+						"type": "string"
+					},
+					"newGuardNonce": {
+						"type": "string"
+					},
+					"contentHTML": {
+						"type": "string"
+					},
+					"contentText": {
+						"type": "string"
+					},
+					"encryption": {
+						"$ref": "#/components/schemas/Encryption"
+					}
+				},
+				"required": [
+					"contentHTML",
+					"contentText",
+					"encryption"
+				],
+				"type": "object",
+				"additionalProperties": false
 			},
 			"Note": {
 				"properties": {
@@ -87,6 +135,10 @@
 					"encryption": {
 						"$ref": "#/components/schemas/Encryption",
 						"description": "The note encryption method (as default none)"
+					},
+					"guardNonce": {
+						"type": "string",
+						"description": "A note's integrity protection value\nUsed to prevent unauthorized modification to cipher texts."
 					},
 					"passwordVersionCodeName": {
 						"type": "string",
@@ -691,19 +743,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"contentHTML": {
-										"type": "string"
-									},
-									"contentText": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"contentHTML",
-									"contentText"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/SetNoteContentParams"
 							}
 						}
 					}
@@ -810,23 +850,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"encryption": {
-										"$ref": "#/components/schemas/Encryption"
-									},
-									"contentText": {
-										"type": "string"
-									},
-									"contentHTML": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"encryption",
-									"contentText",
-									"contentHTML"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/SetNoteEncryptionParams"
 							}
 						}
 					}
